<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>siyapath</artifactId>
        <groupId>org.siyapath</groupId>
        <version>0.1.0</version>
        <relativePath>../../pom.xml</relativePath>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>siyapath-integration</artifactId>
    <name>Siyapath - Integration</name>
    <description>Siyapath - Simulation</description>
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>3.8.2</version>
        </dependency>
        <dependency>
            <groupId>org.siyapath</groupId>
            <artifactId>siyapath-core</artifactId>
            <version>0.1.0</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.9</version>
                <configuration>
                    <systemPropertyVariables>
                        <property>
                            <name>nodes</name>
                            <value>${nodes}</value>
                        </property>
                        <timeStamp>${maven.build.timestamp}</timeStamp>
                        <log4j.configuration>log4j.properties</log4j.configuration>
                    </systemPropertyVariables>
                    <!--<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=512m</argLine>-->
                    <!--<workingDirectory>../..</workingDirectory>-->
                    <!--<forkMode>pertest</forkMode>-->
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>